parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BOOL
    BREAK
    CHAR
    CONTINUE
    ELSE
    NOT
    OR
    PRINT
    SCAN
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     function_list -> function_list function
Rule 3     function_list -> function
Rule 4     function -> FN ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE
Rule 5     param_list_opt -> param_list
Rule 6     param_list_opt -> empty
Rule 7     param_list -> ID
Rule 8     param_list -> param_list COMMA ID
Rule 9     stmt_list -> stmt_list statement
Rule 10    stmt_list -> statement
Rule 11    stmt_list -> empty
Rule 12    statement -> ID ASSIGN NUMBER SEMICOLON
Rule 13    statement -> ID ASSIGN ID SEMICOLON
Rule 14    statement -> ID ASSIGN expression SEMICOLON
Rule 15    statement -> IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
Rule 16    statement -> WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
Rule 17    statement -> FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
Rule 18    for_init_opt -> ID ASSIGN NUMBER
Rule 19    for_init_opt -> ID ASSIGN ID
Rule 20    for_init_opt -> ID ASSIGN expression
Rule 21    for_init_opt -> empty
Rule 22    condition_opt -> condition
Rule 23    condition_opt -> empty
Rule 24    for_update_opt -> ID ASSIGN NUMBER
Rule 25    for_update_opt -> ID ASSIGN ID
Rule 26    for_update_opt -> ID ASSIGN expression
Rule 27    for_update_opt -> empty
Rule 28    statement -> RETURN expression SEMICOLON
Rule 29    statement -> RETURN NUMBER SEMICOLON
Rule 30    statement -> RETURN ID SEMICOLON
Rule 31    statement -> ID LPAREN argument_list_opt RPAREN SEMICOLON
Rule 32    expression -> expression PLUS term
Rule 33    expression -> expression MINUS term
Rule 34    expression -> term
Rule 35    term -> term TIMES factor
Rule 36    term -> term DIVIDE factor
Rule 37    term -> term MOD factor
Rule 38    term -> factor
Rule 39    factor -> NUMBER
Rule 40    factor -> ID
Rule 41    factor -> LPAREN expression RPAREN
Rule 42    condition -> expression LT expression
Rule 43    condition -> expression GT expression
Rule 44    condition -> expression LE expression
Rule 45    condition -> expression GE expression
Rule 46    condition -> expression EQ expression
Rule 47    condition -> expression NE expression
Rule 48    empty -> <empty>
Rule 49    factor -> ID LPAREN argument_list_opt RPAREN
Rule 50    argument_list_opt -> argument_list
Rule 51    argument_list_opt -> empty
Rule 52    argument_list -> argument
Rule 53    argument_list -> argument_list COMMA argument
Rule 54    argument -> expression

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 12 13 14 18 19 20 24 25 26
BOOL                 : 
BREAK                : 
CHAR                 : 
COMMA                : 8 53
CONTINUE             : 
DIVIDE               : 36
ELSE                 : 
EQ                   : 46
FN                   : 4
FOR                  : 17
GE                   : 45
GT                   : 43
ID                   : 4 7 8 12 13 13 14 18 19 19 20 24 25 25 26 30 31 40 49
IF                   : 15
LBRACE               : 4 15 16 17
LE                   : 44
LPAREN               : 4 15 16 17 31 41 49
LT                   : 42
MINUS                : 33
MOD                  : 37
NE                   : 47
NOT                  : 
NUMBER               : 12 18 24 29 39
OR                   : 
PLUS                 : 32
PRINT                : 
RBRACE               : 4 15 16 17
RETURN               : 28 29 30
RPAREN               : 4 15 16 17 31 41 49
SCAN                 : 
SEMICOLON            : 12 13 14 17 17 28 29 30 31
STRING               : 
TIMES                : 35
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

argument             : 52 53
argument_list        : 50 53
argument_list_opt    : 31 49
condition            : 15 16 22
condition_opt        : 17
empty                : 6 11 21 23 27 51
expression           : 14 20 26 28 32 33 41 42 42 43 43 44 44 45 45 46 46 47 47 54
factor               : 35 36 37 38
for_init_opt         : 17
for_update_opt       : 17
function             : 1 2 3
function_list        : 2
param_list           : 5 8
param_list_opt       : 4
program              : 0
statement            : 9 10
stmt_list            : 4 9 15 16 17
term                 : 32 33 34 35 36 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (4) function -> . FN ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE

    FN              shift and go to state 3

    program                        shift and go to state 1
    function                       shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> function .

    $end            reduce using rule 1 (program -> function .)


state 3

    (4) function -> FN . ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE

    ID              shift and go to state 4


state 4

    (4) function -> FN ID . LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 5


state 5

    (4) function -> FN ID LPAREN . param_list_opt RPAREN LBRACE stmt_list RBRACE
    (5) param_list_opt -> . param_list
    (6) param_list_opt -> . empty
    (7) param_list -> . ID
    (8) param_list -> . param_list COMMA ID
    (48) empty -> .

    ID              shift and go to state 6
    RPAREN          reduce using rule 48 (empty -> .)

    param_list_opt                 shift and go to state 7
    param_list                     shift and go to state 8
    empty                          shift and go to state 9

state 6

    (7) param_list -> ID .

    COMMA           reduce using rule 7 (param_list -> ID .)
    RPAREN          reduce using rule 7 (param_list -> ID .)


state 7

    (4) function -> FN ID LPAREN param_list_opt . RPAREN LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 10


state 8

    (5) param_list_opt -> param_list .
    (8) param_list -> param_list . COMMA ID

    RPAREN          reduce using rule 5 (param_list_opt -> param_list .)
    COMMA           shift and go to state 11


state 9

    (6) param_list_opt -> empty .

    RPAREN          reduce using rule 6 (param_list_opt -> empty .)


state 10

    (4) function -> FN ID LPAREN param_list_opt RPAREN . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 12


state 11

    (8) param_list -> param_list COMMA . ID

    ID              shift and go to state 13


state 12

    (4) function -> FN ID LPAREN param_list_opt RPAREN LBRACE . stmt_list RBRACE
    (9) stmt_list -> . stmt_list statement
    (10) stmt_list -> . statement
    (11) stmt_list -> . empty
    (12) statement -> . ID ASSIGN NUMBER SEMICOLON
    (13) statement -> . ID ASSIGN ID SEMICOLON
    (14) statement -> . ID ASSIGN expression SEMICOLON
    (15) statement -> . IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (16) statement -> . WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (17) statement -> . FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (28) statement -> . RETURN expression SEMICOLON
    (29) statement -> . RETURN NUMBER SEMICOLON
    (30) statement -> . RETURN ID SEMICOLON
    (31) statement -> . ID LPAREN argument_list_opt RPAREN SEMICOLON
    (48) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    ID              shift and go to state 14
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    RBRACE          reduce using rule 48 (empty -> .)

  ! ID              [ reduce using rule 48 (empty -> .) ]
  ! IF              [ reduce using rule 48 (empty -> .) ]
  ! WHILE           [ reduce using rule 48 (empty -> .) ]
  ! FOR             [ reduce using rule 48 (empty -> .) ]
  ! RETURN          [ reduce using rule 48 (empty -> .) ]

    stmt_list                      shift and go to state 15
    statement                      shift and go to state 16
    empty                          shift and go to state 17

state 13

    (8) param_list -> param_list COMMA ID .

    COMMA           reduce using rule 8 (param_list -> param_list COMMA ID .)
    RPAREN          reduce using rule 8 (param_list -> param_list COMMA ID .)


state 14

    (12) statement -> ID . ASSIGN NUMBER SEMICOLON
    (13) statement -> ID . ASSIGN ID SEMICOLON
    (14) statement -> ID . ASSIGN expression SEMICOLON
    (31) statement -> ID . LPAREN argument_list_opt RPAREN SEMICOLON

    ASSIGN          shift and go to state 22
    LPAREN          shift and go to state 23


state 15

    (4) function -> FN ID LPAREN param_list_opt RPAREN LBRACE stmt_list . RBRACE
    (9) stmt_list -> stmt_list . statement
    (12) statement -> . ID ASSIGN NUMBER SEMICOLON
    (13) statement -> . ID ASSIGN ID SEMICOLON
    (14) statement -> . ID ASSIGN expression SEMICOLON
    (15) statement -> . IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (16) statement -> . WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (17) statement -> . FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (28) statement -> . RETURN expression SEMICOLON
    (29) statement -> . RETURN NUMBER SEMICOLON
    (30) statement -> . RETURN ID SEMICOLON
    (31) statement -> . ID LPAREN argument_list_opt RPAREN SEMICOLON

    RBRACE          shift and go to state 24
    ID              shift and go to state 14
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21

    statement                      shift and go to state 25

state 16

    (10) stmt_list -> statement .

    RBRACE          reduce using rule 10 (stmt_list -> statement .)
    ID              reduce using rule 10 (stmt_list -> statement .)
    IF              reduce using rule 10 (stmt_list -> statement .)
    WHILE           reduce using rule 10 (stmt_list -> statement .)
    FOR             reduce using rule 10 (stmt_list -> statement .)
    RETURN          reduce using rule 10 (stmt_list -> statement .)


state 17

    (11) stmt_list -> empty .

    RBRACE          reduce using rule 11 (stmt_list -> empty .)
    ID              reduce using rule 11 (stmt_list -> empty .)
    IF              reduce using rule 11 (stmt_list -> empty .)
    WHILE           reduce using rule 11 (stmt_list -> empty .)
    FOR             reduce using rule 11 (stmt_list -> empty .)
    RETURN          reduce using rule 11 (stmt_list -> empty .)


state 18

    (15) statement -> IF . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 26


state 19

    (16) statement -> WHILE . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 27


state 20

    (17) statement -> FOR . LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 28


state 21

    (28) statement -> RETURN . expression SEMICOLON
    (29) statement -> RETURN . NUMBER SEMICOLON
    (30) statement -> RETURN . ID SEMICOLON
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 30
    ID              shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 29
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 22

    (12) statement -> ID ASSIGN . NUMBER SEMICOLON
    (13) statement -> ID ASSIGN . ID SEMICOLON
    (14) statement -> ID ASSIGN . expression SEMICOLON
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 36
    ID              shift and go to state 35
    LPAREN          shift and go to state 34

    expression                     shift and go to state 37
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 23

    (31) statement -> ID LPAREN . argument_list_opt RPAREN SEMICOLON
    (50) argument_list_opt -> . argument_list
    (51) argument_list_opt -> . empty
    (52) argument_list -> . argument
    (53) argument_list -> . argument_list COMMA argument
    (48) empty -> .
    (54) argument -> . expression
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    RPAREN          reduce using rule 48 (empty -> .)
    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    argument_list_opt              shift and go to state 39
    argument_list                  shift and go to state 40
    empty                          shift and go to state 41
    argument                       shift and go to state 42
    expression                     shift and go to state 43
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 24

    (4) function -> FN ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE .

    $end            reduce using rule 4 (function -> FN ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE .)


state 25

    (9) stmt_list -> stmt_list statement .

    RBRACE          reduce using rule 9 (stmt_list -> stmt_list statement .)
    ID              reduce using rule 9 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 9 (stmt_list -> stmt_list statement .)
    WHILE           reduce using rule 9 (stmt_list -> stmt_list statement .)
    FOR             reduce using rule 9 (stmt_list -> stmt_list statement .)
    RETURN          reduce using rule 9 (stmt_list -> stmt_list statement .)


state 26

    (15) statement -> IF LPAREN . condition RPAREN LBRACE stmt_list RBRACE
    (42) condition -> . expression LT expression
    (43) condition -> . expression GT expression
    (44) condition -> . expression LE expression
    (45) condition -> . expression GE expression
    (46) condition -> . expression EQ expression
    (47) condition -> . expression NE expression
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    condition                      shift and go to state 45
    expression                     shift and go to state 46
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 27

    (16) statement -> WHILE LPAREN . condition RPAREN LBRACE stmt_list RBRACE
    (42) condition -> . expression LT expression
    (43) condition -> . expression GT expression
    (44) condition -> . expression LE expression
    (45) condition -> . expression GE expression
    (46) condition -> . expression EQ expression
    (47) condition -> . expression NE expression
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    condition                      shift and go to state 47
    expression                     shift and go to state 46
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 28

    (17) statement -> FOR LPAREN . for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (18) for_init_opt -> . ID ASSIGN NUMBER
    (19) for_init_opt -> . ID ASSIGN ID
    (20) for_init_opt -> . ID ASSIGN expression
    (21) for_init_opt -> . empty
    (48) empty -> .

    ID              shift and go to state 49
    SEMICOLON       reduce using rule 48 (empty -> .)

    for_init_opt                   shift and go to state 48
    empty                          shift and go to state 50

state 29

    (28) statement -> RETURN expression . SEMICOLON
    (32) expression -> expression . PLUS term
    (33) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 30

    (29) statement -> RETURN NUMBER . SEMICOLON
    (39) factor -> NUMBER .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 54
    TIMES           reduce using rule 39 (factor -> NUMBER .)
    DIVIDE          reduce using rule 39 (factor -> NUMBER .)
    MOD             reduce using rule 39 (factor -> NUMBER .)
    PLUS            reduce using rule 39 (factor -> NUMBER .)
    MINUS           reduce using rule 39 (factor -> NUMBER .)

  ! SEMICOLON       [ reduce using rule 39 (factor -> NUMBER .) ]


state 31

    (30) statement -> RETURN ID . SEMICOLON
    (40) factor -> ID .
    (49) factor -> ID . LPAREN argument_list_opt RPAREN

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 55
    TIMES           reduce using rule 40 (factor -> ID .)
    DIVIDE          reduce using rule 40 (factor -> ID .)
    MOD             reduce using rule 40 (factor -> ID .)
    PLUS            reduce using rule 40 (factor -> ID .)
    MINUS           reduce using rule 40 (factor -> ID .)
    LPAREN          shift and go to state 56

  ! SEMICOLON       [ reduce using rule 40 (factor -> ID .) ]


state 32

    (34) expression -> term .
    (35) term -> term . TIMES factor
    (36) term -> term . DIVIDE factor
    (37) term -> term . MOD factor

    SEMICOLON       reduce using rule 34 (expression -> term .)
    PLUS            reduce using rule 34 (expression -> term .)
    MINUS           reduce using rule 34 (expression -> term .)
    COMMA           reduce using rule 34 (expression -> term .)
    RPAREN          reduce using rule 34 (expression -> term .)
    LT              reduce using rule 34 (expression -> term .)
    GT              reduce using rule 34 (expression -> term .)
    LE              reduce using rule 34 (expression -> term .)
    GE              reduce using rule 34 (expression -> term .)
    EQ              reduce using rule 34 (expression -> term .)
    NE              reduce using rule 34 (expression -> term .)
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    MOD             shift and go to state 59


state 33

    (38) term -> factor .

    TIMES           reduce using rule 38 (term -> factor .)
    DIVIDE          reduce using rule 38 (term -> factor .)
    MOD             reduce using rule 38 (term -> factor .)
    SEMICOLON       reduce using rule 38 (term -> factor .)
    PLUS            reduce using rule 38 (term -> factor .)
    MINUS           reduce using rule 38 (term -> factor .)
    COMMA           reduce using rule 38 (term -> factor .)
    RPAREN          reduce using rule 38 (term -> factor .)
    LT              reduce using rule 38 (term -> factor .)
    GT              reduce using rule 38 (term -> factor .)
    LE              reduce using rule 38 (term -> factor .)
    GE              reduce using rule 38 (term -> factor .)
    EQ              reduce using rule 38 (term -> factor .)
    NE              reduce using rule 38 (term -> factor .)


state 34

    (41) factor -> LPAREN . expression RPAREN
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    expression                     shift and go to state 60
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 35

    (13) statement -> ID ASSIGN ID . SEMICOLON
    (40) factor -> ID .
    (49) factor -> ID . LPAREN argument_list_opt RPAREN

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 61
    TIMES           reduce using rule 40 (factor -> ID .)
    DIVIDE          reduce using rule 40 (factor -> ID .)
    MOD             reduce using rule 40 (factor -> ID .)
    PLUS            reduce using rule 40 (factor -> ID .)
    MINUS           reduce using rule 40 (factor -> ID .)
    LPAREN          shift and go to state 56

  ! SEMICOLON       [ reduce using rule 40 (factor -> ID .) ]


state 36

    (12) statement -> ID ASSIGN NUMBER . SEMICOLON
    (39) factor -> NUMBER .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 62
    TIMES           reduce using rule 39 (factor -> NUMBER .)
    DIVIDE          reduce using rule 39 (factor -> NUMBER .)
    MOD             reduce using rule 39 (factor -> NUMBER .)
    PLUS            reduce using rule 39 (factor -> NUMBER .)
    MINUS           reduce using rule 39 (factor -> NUMBER .)

  ! SEMICOLON       [ reduce using rule 39 (factor -> NUMBER .) ]


state 37

    (14) statement -> ID ASSIGN expression . SEMICOLON
    (32) expression -> expression . PLUS term
    (33) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 63
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 38

    (40) factor -> ID .
    (49) factor -> ID . LPAREN argument_list_opt RPAREN

    TIMES           reduce using rule 40 (factor -> ID .)
    DIVIDE          reduce using rule 40 (factor -> ID .)
    MOD             reduce using rule 40 (factor -> ID .)
    PLUS            reduce using rule 40 (factor -> ID .)
    MINUS           reduce using rule 40 (factor -> ID .)
    COMMA           reduce using rule 40 (factor -> ID .)
    RPAREN          reduce using rule 40 (factor -> ID .)
    LT              reduce using rule 40 (factor -> ID .)
    GT              reduce using rule 40 (factor -> ID .)
    LE              reduce using rule 40 (factor -> ID .)
    GE              reduce using rule 40 (factor -> ID .)
    EQ              reduce using rule 40 (factor -> ID .)
    NE              reduce using rule 40 (factor -> ID .)
    SEMICOLON       reduce using rule 40 (factor -> ID .)
    LPAREN          shift and go to state 56


state 39

    (31) statement -> ID LPAREN argument_list_opt . RPAREN SEMICOLON

    RPAREN          shift and go to state 64


state 40

    (50) argument_list_opt -> argument_list .
    (53) argument_list -> argument_list . COMMA argument

    RPAREN          reduce using rule 50 (argument_list_opt -> argument_list .)
    COMMA           shift and go to state 65


state 41

    (51) argument_list_opt -> empty .

    RPAREN          reduce using rule 51 (argument_list_opt -> empty .)


state 42

    (52) argument_list -> argument .

    COMMA           reduce using rule 52 (argument_list -> argument .)
    RPAREN          reduce using rule 52 (argument_list -> argument .)


state 43

    (54) argument -> expression .
    (32) expression -> expression . PLUS term
    (33) expression -> expression . MINUS term

    COMMA           reduce using rule 54 (argument -> expression .)
    RPAREN          reduce using rule 54 (argument -> expression .)
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 44

    (39) factor -> NUMBER .

    TIMES           reduce using rule 39 (factor -> NUMBER .)
    DIVIDE          reduce using rule 39 (factor -> NUMBER .)
    MOD             reduce using rule 39 (factor -> NUMBER .)
    PLUS            reduce using rule 39 (factor -> NUMBER .)
    MINUS           reduce using rule 39 (factor -> NUMBER .)
    COMMA           reduce using rule 39 (factor -> NUMBER .)
    RPAREN          reduce using rule 39 (factor -> NUMBER .)
    LT              reduce using rule 39 (factor -> NUMBER .)
    GT              reduce using rule 39 (factor -> NUMBER .)
    LE              reduce using rule 39 (factor -> NUMBER .)
    GE              reduce using rule 39 (factor -> NUMBER .)
    EQ              reduce using rule 39 (factor -> NUMBER .)
    NE              reduce using rule 39 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 39 (factor -> NUMBER .)


state 45

    (15) statement -> IF LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 66


state 46

    (42) condition -> expression . LT expression
    (43) condition -> expression . GT expression
    (44) condition -> expression . LE expression
    (45) condition -> expression . GE expression
    (46) condition -> expression . EQ expression
    (47) condition -> expression . NE expression
    (32) expression -> expression . PLUS term
    (33) expression -> expression . MINUS term

    LT              shift and go to state 67
    GT              shift and go to state 68
    LE              shift and go to state 69
    GE              shift and go to state 70
    EQ              shift and go to state 71
    NE              shift and go to state 72
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 47

    (16) statement -> WHILE LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 73


state 48

    (17) statement -> FOR LPAREN for_init_opt . SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE

    SEMICOLON       shift and go to state 74


state 49

    (18) for_init_opt -> ID . ASSIGN NUMBER
    (19) for_init_opt -> ID . ASSIGN ID
    (20) for_init_opt -> ID . ASSIGN expression

    ASSIGN          shift and go to state 75


state 50

    (21) for_init_opt -> empty .

    SEMICOLON       reduce using rule 21 (for_init_opt -> empty .)


state 51

    (28) statement -> RETURN expression SEMICOLON .

    RBRACE          reduce using rule 28 (statement -> RETURN expression SEMICOLON .)
    ID              reduce using rule 28 (statement -> RETURN expression SEMICOLON .)
    IF              reduce using rule 28 (statement -> RETURN expression SEMICOLON .)
    WHILE           reduce using rule 28 (statement -> RETURN expression SEMICOLON .)
    FOR             reduce using rule 28 (statement -> RETURN expression SEMICOLON .)
    RETURN          reduce using rule 28 (statement -> RETURN expression SEMICOLON .)


state 52

    (32) expression -> expression PLUS . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    term                           shift and go to state 76
    factor                         shift and go to state 33

state 53

    (33) expression -> expression MINUS . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    term                           shift and go to state 77
    factor                         shift and go to state 33

state 54

    (29) statement -> RETURN NUMBER SEMICOLON .

    RBRACE          reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)
    ID              reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)
    IF              reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)
    WHILE           reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)
    FOR             reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)
    RETURN          reduce using rule 29 (statement -> RETURN NUMBER SEMICOLON .)


state 55

    (30) statement -> RETURN ID SEMICOLON .

    RBRACE          reduce using rule 30 (statement -> RETURN ID SEMICOLON .)
    ID              reduce using rule 30 (statement -> RETURN ID SEMICOLON .)
    IF              reduce using rule 30 (statement -> RETURN ID SEMICOLON .)
    WHILE           reduce using rule 30 (statement -> RETURN ID SEMICOLON .)
    FOR             reduce using rule 30 (statement -> RETURN ID SEMICOLON .)
    RETURN          reduce using rule 30 (statement -> RETURN ID SEMICOLON .)


state 56

    (49) factor -> ID LPAREN . argument_list_opt RPAREN
    (50) argument_list_opt -> . argument_list
    (51) argument_list_opt -> . empty
    (52) argument_list -> . argument
    (53) argument_list -> . argument_list COMMA argument
    (48) empty -> .
    (54) argument -> . expression
    (32) expression -> . expression PLUS term
    (33) expression -> . expression MINUS term
    (34) expression -> . term
    (35) term -> . term TIMES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term MOD factor
    (38) term -> . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    RPAREN          reduce using rule 48 (empty -> .)
    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    argument_list_opt              shift and go to state 78
    argument_list                  shift and go to state 40
    empty                          shift and go to state 41
    argument                       shift and go to state 42
    expression                     shift and go to state 43
    term                           shift and go to state 32
    factor                         shift and go to state 33

state 57

    (35) term -> term TIMES . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    factor                         shift and go to state 79

state 58

    (36) term -> term DIVIDE . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    factor                         shift and go to state 80

state 59

    (37) term -> term MOD . factor
    (39) factor -> . NUMBER
    (40) factor -> . ID
    (41) factor -> . LPAREN expression RPAREN
    (49) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 44
    ID              shift and go to state 38
    LPAREN          shift and go to state 34

    factor                         shift and go to state 81

state 60

    (41) factor -> LPAREN expression . RPAREN
    (32) expression -> expression . PLUS term
    (33) expression -> expression . MINUS term

    RPAREN          shift and go to state 82
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53


state 61

    (13) statement -> ID ASSIGN ID SEMICOLON .

    RBRACE          reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)
    ID              reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)
    IF              reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)
    WHILE           reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)
    FOR             reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)
    RETURN          reduce using rule 13 (statement -> ID ASSIGN ID SEMICOLON .)


state 62

    (12) statement -> ID ASSIGN NUMBER SEMICOLON .

    RBRACE          reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)
    ID              reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)
    IF              reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)
    WHILE           reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)
    FOR             reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)
    RETURN          reduce using rule 12 (statement -> ID ASSIGN NUMBER SEMICOLON .)


state 63

    (14) statement -> ID ASSIGN expression SEMICOLON .

    RBRACE          reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)
    FOR             reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)
    RETURN          reduce using rule 14 (statement -> ID ASSIGN expression SEMICOLON .)


state 64

    (31) statement -> ID LPAREN argument_list_opt RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 83


state 65
